2006-06-04  Csaba Henk <csaba.henk@creo.hu>
	* Added support for the rest of FUSE methods:
	  flush, fgetattr, ftruncate, access, getxattr, listxattr, setxattr,
	  removexattr.

2006-06-01  Csaba Henk <csaba.henk@creo.hu>
	* Distillate Fuse instance -> <file> method proxying code into a
	  dedicated class.

2006-05-31  Csaba Henk <csaba.henk@creo.hu>
	* Update code so that it can use newer FUSE features:
	   - Stage 1: make file I/O stateful.
	     + If `open' methods returns an object, that will
	       be preserved and passed around to I/O requests
	       on the file in question.
	     + Added support for `create' method
	     + Wrap this mechanism into OO: file I/O methods
	       can be implemented via an user specified class.
	     + Add warning to README.new_fusepy_api.
	   - Stage 2: update directory related features
	     + Switch to readdir() from deprecated getdir() method.
	     + Add support for new directory methods.
	     + Make directory I/O stateful.
	     + Extend OO wrappers to directories.
	     + Switch from sequence based data transfer model to general
	       iterator based one.
	     + Add a dedicated class to carry directory entries instead
	       of using tuples.
	     + Add compact hooks.

2006-05-29  Csaba Henk <csaba.henk@creo.hu>
	* Add some missing Py_DECREF-s.
	* Make compat layer side effect free, fix bailing out upon
          the lack of optional stat fields.
	* Fix stat/offset integer overflows.
	  Based on patch from Michael Cohen.

2006-05-28  Csaba Henk <csaba.henk@creo.hu>
	* Add support for st_rdev, st_blksize, st_block stat fields.
	  Noticed by Robert Bradford.
	* Switch getattr / statfs to an object oriented interface:
	   - Revert the addition of the statvfs method.
	   - Implement compat conversion for old getattr / statfs
	     results.

2006-05-27  Csaba Henk <csaba.henk@creo.hu>
	* setup.py related fixes:
	   - fix missing installation of fuse.py
	   - fix typo in reference to shout-py  